# EmojiCharades

./: .gitignore  flake.nix
server/: Cargo.toml
server/src/: actor.rs  main.rs  websockets.rs
server/src/assets/: prompts.txt
