[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
itertools = "0.10.5"
once_cell = "1.17.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }

[dependencies.uuid]
version = "1.2.2"
features = [ "v4" ]
